@@ -8,6 +8,10 @@ Changes - Apache::Test change logfile
 
 =item 1.33-dev
 
+Provide build/test environment for modules bundled with mod_perl like
+Apache::Reload and Apache::SizeLimit
+[Torsten Foertsch]
+
 The CN in server certificates generated by Apache::TestSSLCA will now
 match the servername passed to t/TEST.
 [Joe Orton]
